fix: untag button overflow

--- a/src/components/imageModal/image-modal.module.scss
+++ b/src/components/imageModal/image-modal.module.scss
@@ -5,10 +5,6 @@
     @include mixins.modal-container;
 }
 
-.modal-open {
-    @include mixins.document-modal-open;
-}
-
 .overlay {
     @include mixins.overlay;
 }
