--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -54,9 +54,6 @@
     }
 }
 
-@mixin document-modal-open {
-}
-
 $overlay-index: 30000;
 @mixin overlay {
     width: 100vw;
